--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -342,10 +342,10 @@
 
                 <TextView
                     android:id="@+id/gender"
-                    android:layout_width="180dp"
-                    android:layout_height="35dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
                     android:layout_marginStart="0dp"
-                    android:layout_marginTop="0dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="5dp"
                     android:text="Gender"
@@ -397,10 +397,10 @@
 
                 <TextView
                     android:id="@+id/genderPref"
-                    android:layout_width="180dp"
-                    android:layout_height="35dp"
+                    android:layout_width="377dp"
+                    android:layout_height="30dp"
                     android:layout_marginStart="0dp"
-                    android:layout_marginTop="0dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="5dp"
                     android:text="Gender Preference"
@@ -464,12 +464,12 @@
 
                 <TextView
                     android:id="@+id/transportPref"
-                    android:layout_width="356dp"
-                    android:layout_height="40dp"
+                    android:layout_width="377dp"
+                    android:layout_height="30dp"
                     android:layout_marginStart="0dp"
-                    android:layout_marginTop="0dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="15dp"
-                    android:layout_marginBottom="0dp"
+                    android:layout_marginBottom="5dp"
                     android:text="Mode of Transport Preference"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                     android:textColor="#003989"
