--- a/app/src/main/res/layout/fragment_offline_maps.xml
+++ b/app/src/main/res/layout/fragment_offline_maps.xml
@@ -26,6 +26,18 @@
         android:src="@drawable/ic_directions_white_24dp"
         app:srcCompat="@color/colorAccent" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabRate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="120dp"
+            android:layout_marginEnd="20dp"
+            android:clickable="true"
+            android:src="@drawable/ic_star_gold_36dp"
+            app:srcCompat="@color/colorAccent" />
+
         <RelativeLayout
             android:id="@+id/navtop_layout"
             android:layout_width="match_parent"
