--- a/app/src/main/res/layout/fragment_user_rating.xml
+++ b/app/src/main/res/layout/fragment_user_rating.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".ui.fragments.UserRatingFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/userList"
